--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.table-card {
+  margin: 10px 0;
+  padding: 30px;
+  background: #fff;
+  width: 100%;
+  height: calc(100vh - 250px);
+  min-height: 300px;
+  overflow: hidden;
+}
