--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 .table-card {
+  border: 1px solid #e4e7ed;
+  border-radius: 5px;
   margin: 10px 0;
   padding: 30px;
   background: #fff;
   width: 100%;
-  height: calc(100vh - 250px);
-  min-height: 300px;
-  overflow: hidden;
+  height: calc(100vh - 255px);
+  overflow: scroll;
 }
