--- a/src/components/common/commonSearch/index.scss
+++ b/src/components/common/commonSearch/index.scss
@@ -1,8 +1,11 @@
 .common-search {
+  border-radius: 5px;
+  border: 1px solid #e4e7ed;
   background: #fff;
   display: flex;
   padding: 24px 20px 24px 20px;
-  border-bottom: 12px #f1f2f5 solid;
+  margin-bottom: 12px;
+  // border-bottom: 12px #f1f2f5 solid;
   .search-condition {
     display: flex;
     align-items: center;
