--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,9 +6,15 @@
   border: 1px solid #e4e7ed;
   border-radius: 5px;
   margin: 10px 0;
-  padding: 30px;
+  padding: 15px 15px 30px 15px;
   background: #fff;
   width: 100%;
   height: calc(100vh - 255px);
   overflow: scroll;
+  .button-area {
+    padding: 0 0 10px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
 }
