--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,8 +10,9 @@
   background: #fff;
   width: 100%;
   height: calc(100vh - 255px);
-  overflow: scroll;
+  overflow-y: scroll;
   .button-area {
+    // overflow: hidden;
     padding: 0 0 10px 0;
     display: flex;
     flex-direction: row;
