✨ feat: 新增公告表格组件、axios的判断

--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,7 +1,10 @@
 header {
   .header-container {
+    display: flex;
+    align-items: center;
     height: 50px;
     background: #fff;
     box-shadow: 0 1px 4px #00152914;
+    margin-bottom: 20px;
   }
 }
