--- a/src/components/common/commonTable/index.scss
+++ b/src/components/common/commonTable/index.scss
@@ -1,4 +1,9 @@
 .common-table {
+  tr {
+    th {
+      font-size: 12px !important;
+    }
+  }
   tbody {
     td {
       font-size: 12px !important;
