--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,12 +4,12 @@
 .table-card {
   border: 1px solid #e4e7ed;
   border-radius: 5px;
-  margin: 10px 0;
-  padding: 15px 15px 30px 15px;
+  margin: 8px 0;
+  padding: 10px 15px;
   background: #fff;
   width: 100%;
-  height: calc(100vh - 165px);
-  overflow-y: scroll;
+  height: calc(100vh - 160px);
+  // overflow-y: scroll;
   .button-area {
     // overflow: hidden;
     padding: 0 0 10px 0;
