--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -10,6 +10,7 @@
   width: 100%;
   height: calc(100vh - 160px);
   // overflow-y: scroll;
+  overflow: hidden;
   .button-area {
     // overflow: hidden;
     padding: 0 0 10px 0;
