--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,7 +13,7 @@
   overflow: hidden;
   .button-area {
     // overflow: hidden;
-    padding: 0 0 10px 0;
+    padding: 8px 0 15px 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
